2006-01-13  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.c (pygobject_register_class): Change strategy
	a bit: don't ignore bases; use but augment it with missing bases
	extracted in runtime.

	* gobject/pygobject.c (pygobject_register_class): Don't use the
	passed in 'bases' parameter; instead find out in runtime the bases
	for any given gtype.
	(pyg_type_get_bases, pygobject_new_with_interfaces): Refactor code
	that dynamically discovers bases into a separate function;
	Override tp_dealloc, tp_alloc, tp_free, tp_traverse, and tp_clear,
	inherit them again from the parent type, since type_new inside
	Python core sets them to hardcoded functions subtype_xxx.  Also
	call py_parent_type->ob_type, instead of fixed &PyType_Type.
	(pygobject_clear): Change a g_message to g_warning.

2006-01-13  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (pyg_io_add_watch),
	(marshal_emission_hook), (pyg_add_emission_hook),
	(pyg_remove_emission_hook):
	* gobject/pygobject.c:
	* tests/test_signal.py:

	Add add/remove_emission_hook and tests. Fixes #325977

2006-01-11  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* gobject/gobjectmodule.c (_pyg_signal_accumulator),
	(create_signal, pyg_signal_accumulator_true_handled),
	(initgobject): Bug 155380 -- Add support for signal accumulators.

	* tests/runtests.py: Add 'test_enum', 'test_conversion' to
	SKIP_FILES, since they depend on pygtk modules so don't work
	anymore.  This should be eventually fixed, though.

	* tests/test_signal.py: Test signal accumulators.

	* gobject/pygtype.c (object_doc_descr_get): Reorder
	properties/signals documentation more nicely: signals + properties
	from each type are presented, with types ranging from the leaf
	types to the base types.

	* configure.ac: Branch, bump version to 2.9.1.

=== PyGObject 2.8.0 ===
2006-01-09  Johan Dahlin  <jdahlin@async.com.br>

	* MANIFEST.in:
	* Makefile.am:
	* tests/Makefile.am:

	Make dist/distcheck work again
